@@ -93,7 +93,7 @@ post_rrset_checks(namedb_type* db, rrset_type* rrset, domain_type* domain)
 
 	if (rrset_rrtype(rrset) == TYPE_RRSIG && domain == rrset->zone->apex) {
 		for (i = 0; i < rrset->rr_count; ++i) {
-			if (rr_rrsig_type_covered(&rrset->rrs[i]) == TYPE_SOA) {
+			if (rr_rrsig_type_covered(&rrset->rrs[i])==TYPE_DNSKEY) {
 				rrset->zone->is_secure = 1;
 				break;
 			}
@@ -516,7 +516,7 @@ read_rrset(namedb_type *db,
 
 	if (rrset_rrtype(rrset) == TYPE_RRSIG && owner == rrset->zone->apex) {
 		for (i = 0; i < rrset->rr_count; ++i) {
-			if (rr_rrsig_type_covered(&rrset->rrs[i]) == TYPE_SOA) {
+			if(rr_rrsig_type_covered(&rrset->rrs[i])==TYPE_DNSKEY) {
 				rrset->zone->is_secure = 1;
 				break;
 			}
